[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/actors/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://src/actors/CLICKTEST.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 48 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 400, 136 )
collision_mask = 8
input_pickable = true
script = ExtResource( 1 )
speed = Vector2( 250, 1000 )
gravity = 300
jumpForce = 250
stomp_impulse = 200

[node name="Player" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -48 )
shape = SubResource( 1 )

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( 1, 3 )
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( -1, -51 )
shape = SubResource( 2 )

[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="input_event" from="StompDetector" to="." method="_on_StompDetector_input_event"]
